compiler/crates/types/tests/typeerr/fn_param_flows.th
ฟังก์ชัน greet(s: ข้อความ) {
    ให้ n: จำนวนเต็ม = s;
}
